--- a/real_server/api/templates/select.html
+++ b/real_server/api/templates/select.html
@@ -1,24 +1,71 @@
-{% load crispy_forms_tags %}
-{% load static %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign in form</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.js" integrity="sha384-T6c9IE9Ud4/bQv9lnJgffn18/G/2+H/xMOv9ikP0GlnFoum/5k7n9m7k9Xm/9Xm" crossorigin="anonymous">
+    <title>Select</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Honk&family=Pixelify+Sans:wght@400..700&family=Press+Start+2P:wght@400&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     </style>
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
     <link rel="shortcut icon" type="image/ico" href="/static/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="../../staticfiles/rest_framework/css/team.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
+
+<style>
+  .arcade_botton{
+      position: relative;
+      border-style: double;
+      height: 115px;
+      width: 140px;
+      background-color: rgba(174, 13, 13, 0.966);
+      border: 5px solid rgba(252, 252, 252, 0.771);
+      box-shadow: 0 4px white;
+      color: aqua;
+      font-family: 'Press Start 2P', system-ui;
+      transition: all 0.1s ease;
+  }
+  
+  .arcade_botton:active{
+  top: 5px;
+  box-shadow: 0 2px #666;
+  color: rgb(255, 255, 255);
+  border: 5px solid white;
+}
+</style>  
+
+<style>
+  * {
+  box-sizing: border-box;
+}
+</style>
+
+
+<style>
+body {
+  margin: 0;
+  padding: 0;
+}
+  .videobg {
+  height: 80vh;
+  overflow: hidden;
+  position: relative; /* requires for to position video properly */
+}
+
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover; /* combined with 'absolute', works like background-size, but for DOM elements */
+}
+
+</style>
 
 <style>
   .footer_nav{
@@ -31,16 +78,17 @@
   }
 </style>
 
+<body>
 
 <!-- Navbar -->
 
 <nav class="navbar navbar-expand-lg border border-5 border-white" style="background: linear-gradient(
   45deg,
-  hsla(168, 85%, 52%, 0.8),
-  hsla(263, 88%, 45%, 0.7) 100%
+  hsla(168, 85%, 52%, 0.5),
+  hsla(263, 88%, 45%, 0.5) 100%
 )">
   <div class="container-fluid" style="color: aqua; "> 
-    <button 
+    <button
       data-mdb-collapse-init
       class="navbar-toggler"
       type="button"
@@ -74,46 +122,43 @@
 </nav>
 <!-- Navbar -->
 
-<body style="background-image: url('https://i.pinimg.com/474x/76/d4/84/76d484a3538b24a114e941dbe586e1a5.jpg');background-repeat: no-repeat; background-size: cover; background-position: center bottom;"></body>
+<!-- recursos
+https://www.shutterstock.com/shutterstock/videos/3467987197/preview/stock-footage--k-abstract-pixel-animation-multicolored-digital-background-geometric-of-square-pattern-moving-with.webm
+https://us.123rf.com/450wm/tetsuobuseteru/tetsuobuseteru1701/tetsuobuseteru170100005/68319422-m%C3%A1quina-de-juego-de-arcade-retro-ilustraci%C3%B3n-del-vector.jpg
+-->
 
- <!-- <div class="row " style="height: 150px;">
-    <h3 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:rgb(7, 8, 8); padding-top: 3%;">Sign in and become a retrogamer</h3>
-</div> -->
-<br><br>
-<div class="row  ">
-    <div class="col"></div>
-    <div style="background-color: black ;color: whitesmoke; height: 350px; font-family: Pixelify Sans, sans-serif; background-image: url('../../staticfiles/oie_transparent.png'); background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 10px;" class="col-3 shadow-lm text-center border-5 border-white">
-      
-      <div class="container py-3">
-        <h5 class="d-flex justify-content-center" style="font-family: Tourney, sans-serif; color:rgb(84, 201, 201)">Sign in and become a retrogamer</h5>
-        {% block content %}
-        <form id="registerForm" method="post" onsubmit="return closeWindow()">
-            {% csrf_token %}
-            {{ form.as_p }}
-            
-            <button type="submit" class="btn btn-primary" data-bs-toggle="popover">Submit</button>
-        </form>
-        
-        {% endblock %}
-      </div>
-        
+
+<div class="videobg" >
+  <video autoplay loop muted>
+    <source src="https://www.shutterstock.com/shutterstock/videos/3467987197/preview/stock-footage--k-abstract-pixel-animation-multicolored-digital-background-geometric-of-square-pattern-moving-with.webm" type="video/webm">
+  </video>
+  <div class="row " style="height: 10vw; ">
+    <h1 style="font-size:4vw; font-family: Tourney, sans-serif; color:aqua;" class="d-flex justify-content-center " >Select game choice</h1>
+  </div>
+  <div class="row fit-content" style="display: flex; justify-content: space-around;">
+    <div class="col text-center" style=" display: flex; justify-content: flex-start; height: 250px; max-width: 200px;">
+      <button class="arcade_botton border-5  rounded-circle">One Player</button>
     </div>
-    <div class="col"></div>
+    <div class="col text-center" style="display: flex; justify-content: flex-end; height: 250px; max-width: 200px;font-family: Pixelify Sans, sans-serif;" >
+      <button class="arcade_botton border-5  rounded-circle">Two Players</button>
+    </div>
+
+  </div>
+ 
+  <div class="row fit-content" style="display: flex; justify-content: space-around; margin-bottom: 8%;">
+    <div class="col text-center" style="display: flex; justify-content: flex-end; height: 250px; max-width: 200px; font-family: Pixelify Sans, sans-serif;">
+      <button class=" arcade_botton border-5  rounded-circle">Duel</button>   
+    </div>
+    <div class="col text-center" style=" display: flex; justify-content: flex-start; height: 250px; max-width: 200px;font-family: Pixelify Sans, sans-serif;" >
+      <button class="arcade_botton border border-5  rounded-circle" >Tour nament</button>
+    </div>
+  </div>
 </div>
-<br><br><br><br>
-<div class="row" style="height: 150px;">
-  
-<script>
-  function closeWindow() {
-  window.close();
-  return true;
-}
-</script>
-  
-  
+
+
 
 <!-- Footer -->
-<footer class="text-center text-white" style="background-image: url('https://i.pinimg.com/originals/94/b9/c6/94b9c64e1c5d912bcfd3db9c6f988b15.gif');background-repeat: no-repeat; background-size: cover ;background-position: center center;";> <!--  #cd09d4 -->
+<footer class="text-center text-white" style="margin-top: -50px ;background-image: url('https://cdn.dribbble.com/userupload/28311765/file/original-b3d1b68257e6c14b3eca96fc95f0649c.gif');background-repeat: no-repeat; background-size: cover ;background-position: center center;";> <!--  #cd09d4 -->
   <!-- Grid container -->
   <div class="container">
     <!-- Section: Links -->
@@ -155,7 +200,7 @@
         <!-- Grid column -->
         <div class="col-md-2">
           <h6 class="footer_nav">
-            <a href="/about.html">About us</a>
+            <a href="/about">About us</a>
           </h6>
         </div>
         <!-- Grid column -->
@@ -195,13 +240,10 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
-
   
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
-  </body>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+</body>
 </html>
 
